src/objects/acfContentManagementSystem__c.object
<CustomObject>
    <description>Click Loans</description>
    <fields>
        <fullName>acfAttachmentId__c</fullName>
        <description>Click Loans</description>
        <label>Attachment Id</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>acfCMS_Page__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Click Loans</description>
        <label>CMS Page</label>
        <referenceTo>acfCMS_Page__c</referenceTo>
        <relationshipName>Content_Management_System</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>acfDescriptionAttachmentID__c</fullName>
        <description>Click Loans</description>
        <label>Description Attachment ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>acfDescriptionImageURL__c</fullName>
        <description>Click Loans</description>
        <formula>IF(  acfDescriptionAttachmentID__c &lt;&gt; null, &quot;/servlet/servlet.FileDownload?file=&quot;&amp; acfDescriptionAttachmentID__c , &quot;&quot;)</formula>
        <label>Description Image URL</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>acfDescription__c</fullName>
        <description>Click Loans</description>
        <label>Description</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>acfHeader_Sequance__c</fullName>
        <description>Click Loans</description>
        <label>Header Sequance</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>acfHeadingRemoveSpace__c</fullName>
        <description>Click Loans</description>
        <formula>SUBSTITUTE( acfHeading__c , &apos; &apos;, &apos;&apos;)</formula>
        <label>Heading Remove Space</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>acfHeading_Caption__c</fullName>
        <description>Click Loans</description>
        <label>Heading Caption</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>acfHeading__c</fullName>
        <description>Click Loans</description>
        <label>Heading</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>acfImageURL__c</fullName>
        <description>Click Loans</description>
        <formula>IF( acfAttachmentId__c  &lt;&gt; null, &quot;/servlet/servlet.FileDownload?file=&quot;&amp;acfAttachmentId__c, &quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Heading Image URL</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>acfIs_Checked__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Click Loans</description>
        <label>Is Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>acfLink_URL__c</fullName>
        <description>Click Loans</description>
        <label>Link URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>acfMoreDetailURL__c</fullName>
        <description>Click Loans</description>
        <label>More Detail URL</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>acfPageName__c</fullName>
        <description>Click Loans</description>
        <label>Page Name</label>
        <picklist>
            <picklistValues>
                <fullName>acfLogin</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Post Login</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Common</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>acfSectionName__c</fullName>
        <description>Click Loans</description>
        <label>Section Name</label>
        <picklist>
            <picklistValues>
                <fullName>Footer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Footer Links</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Footer Link Content</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dashboard</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Registration Popup</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OTP Popup</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Resend OTP Popup</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>About Us</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Preliminary Quote</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>acfSequence__c</fullName>
        <description>Click Loans</description>
        <label>Sequence</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>acfShort_Description__c</fullName>
        <description>Click Loans</description>
        <label>Short Description</label>
        <type>TextArea</type>
    </fields>
    <label>Click Loans Content Management System</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>acfIs_Checked__c</columns>
        <columns>acfSectionName__c</columns>
        <columns>acfPageName__c</columns>
        <columns>acfSequence__c</columns>
        <columns>acfHeading__c</columns>
        <columns>acfHeadingRemoveSpace__c</columns>
        <columns>acfDescription__c</columns>
        <columns>acfAttachmentId__c</columns>
        <columns>acfDescriptionAttachmentID__c</columns>
        <columns>acfImageURL__c</columns>
        <columns>acfMoreDetailURL__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>cms-{000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Content Management System</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>